added stub elasticsearch and a cli option for OpenAI so embeddings are deterministic