@@ -1,40 +1,35 @@
 package io.github.semanticsearch.service;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
 
-import java.util.*;
+import java.util.AbstractMap;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
 import io.github.semanticsearch.model.Document;
 import io.github.semanticsearch.model.SearchRequest;
 import io.github.semanticsearch.model.SearchResult;
-import io.github.semanticsearch.repository.DocumentRepository;
+import io.github.semanticsearch.support.InMemoryDocumentRepository;
 
-@ExtendWith(MockitoExtension.class)
-public class SearchServiceTest {
+class SearchServiceTest {
 
-  @Mock private EmbeddingService embeddingService;
-
-  @Mock private IndexService indexService;
-
-  @Mock private DocumentRepository documentRepository;
-
-  @InjectMocks private SearchService searchService;
-
+  private InMemoryDocumentRepository repository;
+  private StubEmbeddingService embeddingService;
+  private StubIndexService indexService;
+  private SearchService searchService;
   private Document testDocument;
   private UUID documentId;
   private List<Double> testVector;
 
   @BeforeEach
   void setUp() {
+    repository = new InMemoryDocumentRepository();
     documentId = UUID.randomUUID();
     testVector = Arrays.asList(0.1, 0.2, 0.3);
 
@@ -44,11 +39,16 @@ public class SearchServiceTest {
     testDocument.setContent("This is a test document content");
     testDocument.setContentHash("test-hash");
     testDocument.setMetadata(Map.of("key", "value"));
+    repository.save(testDocument);
+
+    embeddingService = new StubEmbeddingService(testVector);
+    indexService = new StubIndexService();
+    searchService = new SearchService(embeddingService, indexService, repository);
   }
 
   @Test
-  void testSearch_Success() {
-    // Arrange
+  void search_returnsResultsWithHighlights() {
+    indexService.nextResults = List.of(new AbstractMap.SimpleEntry<>(documentId, 0.85));
     SearchRequest request =
         SearchRequest.builder()
             .query("test query")
@@ -58,119 +58,104 @@ public class SearchServiceTest {
             .includeHighlights(true)
             .build();
 
-    when(embeddingService.embed(anyString())).thenReturn(testVector);
-
-    List<Map.Entry<UUID, Double>> similarDocuments = new ArrayList<>();
-    similarDocuments.add(new AbstractMap.SimpleEntry<>(documentId, 0.85));
-    when(indexService.findSimilarDocuments(eq(testVector), anyInt(), anyDouble()))
-        .thenReturn(similarDocuments);
-
-    when(documentRepository.findAllById(anyList()))
-        .thenReturn(Collections.singletonList(testDocument));
-
-    // Act
     List<SearchResult> results = searchService.search(request);
 
-    // Assert
-    assertFalse(results.isEmpty());
     assertEquals(1, results.size());
-    assertEquals(documentId, results.get(0).getId());
-    assertEquals("Test Document", results.get(0).getTitle());
-    assertEquals("This is a test document content", results.get(0).getContent());
-    assertEquals(0.85, results.get(0).getScore(), 0.001);
-
-    verify(embeddingService).embed(request.getQuery());
-    verify(indexService).findSimilarDocuments(eq(testVector), eq(10), eq(0.7));
-    verify(documentRepository).findAllById(anyList());
+    SearchResult result = results.get(0);
+    assertEquals(documentId, result.getId());
+    assertEquals("Test Document", result.getTitle());
+    assertEquals(testDocument.getContent(), result.getContent());
+    assertEquals(0.85, result.getScore());
+    assertFalse(result.getHighlights().isEmpty());
+    assertEquals(testVector, embeddingService.lastTextEmbedding);
+    assertEquals(testVector, indexService.lastQueryVector);
+    assertEquals(10, indexService.lastLimit);
+    assertEquals(0.7, indexService.lastMinScore);
   }
 
   @Test
-  void testSearch_EmptyEmbedding() {
-    // Arrange
-    SearchRequest request =
-        SearchRequest.builder().query("test query").limit(10).minScore(0.7).build();
+  void search_returnsEmptyWhenEmbeddingFails() {
+    embeddingService.nextEmbedding = Collections.emptyList();
+    SearchRequest request = SearchRequest.builder().query("bad").limit(5).minScore(0.7).build();
 
-    when(embeddingService.embed(anyString())).thenReturn(Collections.emptyList());
-
-    // Act
     List<SearchResult> results = searchService.search(request);
 
-    // Assert
     assertTrue(results.isEmpty());
-    verify(embeddingService).embed(request.getQuery());
-    verify(indexService, never()).findSimilarDocuments(any(), anyInt(), anyDouble());
-    verify(documentRepository, never()).findAllById(anyList());
   }
 
   @Test
-  void testSearch_NoSimilarDocuments() {
-    // Arrange
-    SearchRequest request =
-        SearchRequest.builder().query("test query").limit(10).minScore(0.7).build();
+  void search_returnsEmptyWhenNoSimilarDocuments() {
+    indexService.nextResults = Collections.emptyList();
+    SearchRequest request = SearchRequest.builder().query("test query").limit(10).minScore(0.7).build();
 
-    when(embeddingService.embed(anyString())).thenReturn(testVector);
-    when(indexService.findSimilarDocuments(any(), anyInt(), anyDouble()))
-        .thenReturn(Collections.emptyList());
-
-    // Act
     List<SearchResult> results = searchService.search(request);
 
-    // Assert
     assertTrue(results.isEmpty());
-    verify(embeddingService).embed(request.getQuery());
-    verify(indexService).findSimilarDocuments(eq(testVector), eq(10), eq(0.7));
-    verify(documentRepository, never()).findAllById(anyList());
+    assertEquals(10, indexService.lastLimit);
   }
 
   @Test
-  void testFindSimilarDocuments_Success() {
-    // Arrange
-    when(documentRepository.findById(documentId)).thenReturn(Optional.of(testDocument));
-    when(embeddingService.embed(anyString())).thenReturn(testVector);
-
-    UUID similarDocId = UUID.randomUUID();
+  void findSimilarDocuments_excludesOriginalDocument() {
+    UUID similarId = UUID.randomUUID();
     Document similarDoc = new Document();
-    similarDoc.setId(similarDocId);
+    similarDoc.setId(similarId);
     similarDoc.setTitle("Similar Document");
     similarDoc.setContent("This is similar content");
+    repository.save(similarDoc);
 
-    List<Map.Entry<UUID, Double>> similarDocuments = new ArrayList<>();
-    similarDocuments.add(new AbstractMap.SimpleEntry<>(documentId, 0.95)); // Original document
-    similarDocuments.add(new AbstractMap.SimpleEntry<>(similarDocId, 0.85)); // Similar document
+    embeddingService.nextEmbedding = testVector;
+    indexService.nextResults =
+        List.of(
+            new AbstractMap.SimpleEntry<>(documentId, 0.95),
+            new AbstractMap.SimpleEntry<>(similarId, 0.85));
 
-    when(indexService.findSimilarDocuments(eq(testVector), anyInt(), anyDouble()))
-        .thenReturn(similarDocuments);
-    when(documentRepository.findAllById(anyList()))
-        .thenReturn(Arrays.asList(testDocument, similarDoc));
+    List<SearchResult> results = searchService.findSimilarDocuments(documentId, 5, 0.5);
 
-    // Act
-    List<SearchResult> results = searchService.findSimilarDocuments(documentId, 10, 0.7);
-
-    // Assert
-    assertFalse(results.isEmpty());
-    assertEquals(1, results.size()); // Should exclude the original document
-    assertEquals(similarDocId, results.get(0).getId());
-    assertEquals("Similar Document", results.get(0).getTitle());
-    assertEquals(0.85, results.get(0).getScore(), 0.001);
-
-    verify(documentRepository).findById(documentId);
-    verify(embeddingService).embed(testDocument.getContent());
-    verify(indexService).findSimilarDocuments(eq(testVector), eq(11), eq(0.7)); // Limit + 1
-    verify(documentRepository).findAllById(anyList());
+    assertEquals(1, results.size());
+    assertEquals(similarId, results.getFirst().getId());
+    assertEquals(6, indexService.lastLimit); // limit + 1 applied
   }
 
   @Test
-  void testFindSimilarDocuments_DocumentNotFound() {
-    // Arrange
-    when(documentRepository.findById(documentId)).thenReturn(Optional.empty());
-
-    // Act
-    List<SearchResult> results = searchService.findSimilarDocuments(documentId, 10, 0.7);
-
-    // Assert
+  void findSimilarDocuments_returnsEmptyWhenMissingDocument() {
+    repository.deleteById(documentId);
+    List<SearchResult> results = searchService.findSimilarDocuments(documentId, 3, 0.7);
     assertTrue(results.isEmpty());
-    verify(documentRepository).findById(documentId);
-    verify(embeddingService, never()).embed(anyString());
-    verify(indexService, never()).findSimilarDocuments(any(), anyInt(), anyDouble());
+  }
+
+  private static class StubEmbeddingService extends EmbeddingService {
+    List<Double> nextEmbedding;
+    List<Double> lastTextEmbedding;
+
+    StubEmbeddingService(List<Double> nextEmbedding) {
+      super(null);
+      this.nextEmbedding = nextEmbedding;
+    }
+
+    @Override
+    public List<Double> embed(String text) {
+      lastTextEmbedding = nextEmbedding;
+      return nextEmbedding;
+    }
+  }
+
+  private static class StubIndexService extends IndexService {
+    List<Map.Entry<UUID, Double>> nextResults = Collections.emptyList();
+    List<Double> lastQueryVector;
+    int lastLimit;
+    double lastMinScore;
+
+    StubIndexService() {
+      super(null, null, null);
+    }
+
+    @Override
+    public List<Map.Entry<UUID, Double>> findSimilarDocuments(
+        List<Double> queryVector, int limit, double minScore) {
+      this.lastQueryVector = queryVector;
+      this.lastLimit = limit;
+      this.lastMinScore = minScore;
+      return nextResults;
+    }
   }
 }
